--- a/cover.html
+++ b/cover.html
@@ -144,6 +144,7 @@ body {
         <a class="button" onclick="openInvitation()">
             <i class="fa-solid fa-envelope-open"></i> Buka Undangan
         </a>
+        <a href="index.html" onclick="sessionStorage.setItem('opened','yes')">Buka Undangan</a>
     </div>
 </div>
 
