--- a/cover.html
+++ b/cover.html
@@ -141,7 +141,9 @@ body {
         </span>
         <div id="guestNote">*mohon maaf apabila salah dalam penulisan nama/gelar</div>
         <h1>You're Invited to Our Wedding</h1>
-        <a href="openInvitation" onclick="sessionStorage.setItem('opened','yes')">Buka Undangan</a>
+        <a class="button" onclick="openInvitation()">
+            <i class="fa-solid fa-envelope-open"></i> Buka Undangan
+        </a>
     </div>
 </div>
 
