--- a/cover.html
+++ b/cover.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Undangan Pernikahan Ikhsan & Anggi</title>
 
-<link rel="preload" as="image" href="assets/images/cover.jpg">
+<link rel="preload" as="image" href="assets/images/cover.webp">
 <link rel="preload" as="audio" href="assets/audio/your-music.mp3">
 <link rel="preload" as="style" href="style.css">
 <link rel="preload" as="script" href="script.js">
