--- a/cover.html
+++ b/cover.html
@@ -58,7 +58,7 @@ body {
     position: absolute;
     inset: 0;
     /* Ganti dengan path gambar Anda */
-    background: url('assets/images/cover.jpg') center/cover no-repeat; 
+    background: url('assets/images/cover.webp') center/cover no-repeat; 
     filter: brightness(1);
     transform: scale(1.05);
     z-index: -1;
