--- a/cover.html
+++ b/cover.html
@@ -26,7 +26,7 @@ body {
 
 /* COVER */
 .cover {
-    position: relative;
+    position: fixed;
     height: 100vh;
     width: 100%;
     overflow: hidden;
