--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
   <!-- Groom -->
   <div class="couple-full">
-    <div class="couple-photo" style="background-image:url('assets/images/ikhsan.jpg')"></div>
+    <div class="couple-photo" style="background-image:url('assets/images/ikhsan.webp')"></div>
 
     <div class="couple-overlay">
       <div class="couple-overlay groom-overlay">
@@ -116,7 +116,7 @@
 
   <!-- Bride -->
   <div class="couple-full">
-    <div class="couple-photo" style="background-image:url('assets/images/anggi.jpg')"></div>
+    <div class="couple-photo" style="background-image:url('assets/images/anggi.webp')"></div>
 
     <div class="couple-overlay">
       <div class="couple-overlay bride-overlay">
@@ -224,13 +224,13 @@
     <h2 class="gallery-title fade-up">Our Gallery</h2>
 
     <div class="gallery-grid">
-      <img src="assets/images/gallery-4.jpg" class="gallery-item fade-up" />
-      <img src="assets/images/gallery-8.jpg" class="gallery-item fade-up tall" />
-      <img src="assets/images/gallery-5.jpg" class="gallery-item fade-up" />
-      <img src="assets/images/gallery-1.jpg" class="gallery-item fade-up wide" />
-      <img src="assets/images/gallery-3.jpg" class="gallery-item fade-up" />
-      <img src="assets/images/gallery-7.jpg" class="gallery-item fade-up tall" />
-       <img src="assets/images/gallery-9.jpg" class="gallery-item fade-up" />
+      <img src="assets/images/gallery-4.webp" class="gallery-item fade-up" />
+      <img src="assets/images/gallery-8.webp" class="gallery-item fade-up tall" />
+      <img src="assets/images/gallery-5.webp" class="gallery-item fade-up" />
+      <img src="assets/images/gallery-1.webp" class="gallery-item fade-up wide" />
+      <img src="assets/images/gallery-3.webp" class="gallery-item fade-up" />
+      <img src="assets/images/gallery-7.webp" class="gallery-item fade-up tall" />
+       <img src="assets/images/gallery-9.webp" class="gallery-item fade-up" />
 
     </div>
 
