--- a/cover.html
+++ b/cover.html
@@ -68,19 +68,33 @@ body {
 
 /* Konten kiri bawah */
 .content {
+    padding-top: 5vh;
     position: absolute;
-    bottom: 5vh;
-    left: 0vw;
-    right: 0vw;
+    inset: 0;
     z-index: 2;
-    text-align: left;
-    
-    /* Tambahan untuk blur background (Glassmorphism) */
-    background: rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(0.87px);
-    border-radius: 12px;
-    padding: 15px 20px;
-    display: block;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+    background: rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(2px);
+
+    padding: 24px;
+    border-radius: 0;
+}
+
+.content h1 {
+    position: absolute;
+    top: 15vh;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 0;
+    white-space: nowrap;
+    font-size: clamp(1.1rem, 4.5vw, 1.6rem);
+
 }
 
 .to { margin: 0 0 5px 0; font-size: 1.15rem; color: #fff; }
