--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ function openInvitation() {
   coverContent.classList.add("slide-up"); // trigger animasi slide-up
 
   setTimeout(() => {
-    window.location.href = "index.html"; // pindah ke index.html setelah animasi
+    window.location.href = "home.html"; // pindah ke home.html setelah animasi
   }, 800); // durasi animasi sama seperti CSS
 }
 
