--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+<!-- Primary Meta -->
+<title>Undangan Pernikahan Ikhsan & Anggi</title>
+<meta name="description" content="Sabtu, 13 Desember 2025 | Undangan Pernikahan Ikhsan & Anggi">
+
+<!-- Open Graph / WhatsApp -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://ikhsan-anggi.github.io/undangan/">
+<meta property="og:title" content="The Wedding Of Ikhsan & Anggi">
+<meta property="og:description" content="Sabtu, 10 Januari 2026">
+<meta property="og:image" content="https://ikhsan-anggi.github.io/undangan/assets/images/preview.webp">
+
+<!-- Optional (lebih rapi di WA) -->
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Undangan Pernikahan Ikhsan & Anggi</title>
