--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <!-- Primary Meta -->
 <title>Undangan Pernikahan Ikhsan & Anggi</title>
-<meta name="description" content="Sabtu, 13 Desember 2025 | Undangan Pernikahan Ikhsan & Anggi">
+<meta name="description" content="Sabtu, 10 Januari 2025 | Undangan Pernikahan Ikhsan & Anggi">
 
 <!-- Open Graph / WhatsApp -->
 <meta property="og:type" content="website">
