--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <!-- Open Graph / WhatsApp -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://ikhsan-anggi.github.io/undangan">
+<meta property="og:url" content="https://ikhsan-anggi.github.io/undangan/">
 <meta property="og:title" content="The Wedding Of Ikhsan & Anggi">
 <meta property="og:description" content="Sabtu, 10 Januari 2026">
 <meta property="og:image" content="https://ikhsan-anggi.github.io/undangan/assets/images/preview.webp">
