--- a/home.html
+++ b/home.html
@@ -3,8 +3,7 @@
 <head>
   <link rel="preload" as="image" href="assets/images/cover.webp">
   <meta charset="UTF-8" />
-  <meta name="viewport" 
-    content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
   <title>Ikhsan & Anggi Wedding</title>
 
   <link rel="icon" href="favicon_ai.ico">
