--- a/home.html
+++ b/home.html
@@ -44,6 +44,7 @@
 
 <!-- ============== COUNTDOWN ============== -->
 <section class="section">
+  <div class="section-inner">
   <div class="blur-card fade-up">
     <h2 class="section-title">Menuju Hari Bahagia</h2>
 
@@ -58,6 +59,7 @@
 
 <!-- ============== AYAT ============== -->
 <section class="section">
+  <div class="section-inner">
   <div class="blur-card fade-up">
     <blockquote class="quote">
       “Dan di antara tanda-tanda (kebesaran)-Nya ialah Dia menciptakan pasangan-pasangan
@@ -70,6 +72,7 @@
 
 <!-- ============== SALAM PEMBUKA ============== -->
 <section class="section">
+  <div class="section-inner">
   <div class="blur-card fade-up salam-card">
     <h3 class="salam-title">
       Assalamu’alaikum Warahmatullahi Wabarakatuh
@@ -86,7 +89,7 @@
 
 <!-- ============== PROFIL MEMPELAI FULL SCREEN ============== -->
 <section id="couple" class="couple-section fade-up">
-
+<div class="section-inner">
   <!-- Groom -->
   <div class="couple-full">
     <div class="couple-photo" style="background-image:url('assets/images/ikhsan.webp')"></div>
@@ -125,6 +128,7 @@
 </section>
 
 <section id="event-section" class="section event">
+<div class="section-inner">
   <div class="event-card-blur fade-up">
     <h2 class="event-title">Acara Pernikahan</h2>
 
@@ -166,6 +170,7 @@
       OUR STORY
 ============================= -->
 <section id="story-section">
+<div class="section-inner">
   <div class="story-wrapper">
 
     <h2 class="story-title fade-up">Our Story</h2>
@@ -212,6 +217,7 @@
       GALLERY
 ============================= -->
 <section id="gallery-section">
+<div class="section-inner">
   <div class="gallery-wrapper">
 
     <h2 class="gallery-title fade-up">Our Gallery</h2>
@@ -240,6 +246,7 @@
       RSVP & UCAPAN
 ============================= -->
 <section id="rsvp-section">
+  <div class="section-inner">
   <div class="rsvp-wrapper fade-up">
 
     <h2 class="rsvp-title">Buku Tamu</h2>
@@ -289,7 +296,7 @@
       WEDDING GIFT
 ============================= -->
 <section id="gift" class="section-blur">
-
+<div class="section-inner">
   <div class="section-inner fade-up">
     <h2 class="gift-title">Wedding Gift</h2>
 
@@ -336,6 +343,7 @@
       CLOSING CINEMATIC
 ============================= -->
 <section id="closing-cinematic">
+  <div class="section-inner">
   <div class="closing-content fade-up">
 
     <small class="closing-small">
