--- a/home.html
+++ b/home.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <link rel="preload" as="image" href="assets/images/cover.webp">
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ikhsan & Anggi Wedding</title>
 
   <link rel="icon" href="favicon_ai.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
 
-  <link rel="stylesheet" href="style.css?v=2" />
+  <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
@@ -19,7 +18,7 @@
 </head>
 
 <body>
-  
+
 <!-- ================= HERO ================= -->
 <header id="hero">
     <div class="hero-blur-box"></div>  
@@ -44,7 +43,6 @@
 
 <!-- ============== COUNTDOWN ============== -->
 <section class="section">
-  <div class="section-inner">
   <div class="blur-card fade-up">
     <h2 class="section-title">Menuju Hari Bahagia</h2>
 
@@ -59,7 +57,6 @@
 
 <!-- ============== AYAT ============== -->
 <section class="section">
-  <div class="section-inner">
   <div class="blur-card fade-up">
     <blockquote class="quote">
       “Dan di antara tanda-tanda (kebesaran)-Nya ialah Dia menciptakan pasangan-pasangan
@@ -72,7 +69,6 @@
 
 <!-- ============== SALAM PEMBUKA ============== -->
 <section class="section">
-  <div class="section-inner">
   <div class="blur-card fade-up salam-card">
     <h3 class="salam-title">
       Assalamu’alaikum Warahmatullahi Wabarakatuh
@@ -89,7 +85,7 @@
 
 <!-- ============== PROFIL MEMPELAI FULL SCREEN ============== -->
 <section id="couple" class="couple-section fade-up">
-<div class="section-inner">
+
   <!-- Groom -->
   <div class="couple-full">
     <div class="couple-photo" style="background-image:url('assets/images/ikhsan.webp')"></div>
@@ -128,7 +124,6 @@
 </section>
 
 <section id="event-section" class="section event">
-<div class="section-inner">
   <div class="event-card-blur fade-up">
     <h2 class="event-title">Acara Pernikahan</h2>
 
@@ -170,7 +165,6 @@
       OUR STORY
 ============================= -->
 <section id="story-section">
-<div class="section-inner">
   <div class="story-wrapper">
 
     <h2 class="story-title fade-up">Our Story</h2>
@@ -217,7 +211,6 @@
       GALLERY
 ============================= -->
 <section id="gallery-section">
-<div class="section-inner">
   <div class="gallery-wrapper">
 
     <h2 class="gallery-title fade-up">Our Gallery</h2>
@@ -246,7 +239,6 @@
       RSVP & UCAPAN
 ============================= -->
 <section id="rsvp-section">
-  <div class="section-inner">
   <div class="rsvp-wrapper fade-up">
 
     <h2 class="rsvp-title">Buku Tamu</h2>
@@ -296,7 +288,7 @@
       WEDDING GIFT
 ============================= -->
 <section id="gift" class="section-blur">
-<div class="section-inner">
+
   <div class="section-inner fade-up">
     <h2 class="gift-title">Wedding Gift</h2>
 
@@ -343,7 +335,6 @@
       CLOSING CINEMATIC
 ============================= -->
 <section id="closing-cinematic">
-  <div class="section-inner">
   <div class="closing-content fade-up">
 
     <small class="closing-small">
