--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+<!-- Open Graph for WhatsApp / Instagram -->
+<meta property="og:type" content="website" />
+<meta property="og:title" content="The Wedding of Ikhsan & Anggi" />
+<meta property="og:description" content="Sabtu, 10 Januari 2026 — Kami mengundang Anda untuk hadir di hari bahagia kami." />
+<meta property="og:url" content="https://ikhsan-anggi.github.io/undangan/" />
+<meta property="og:image" content="https://ikhsan-anggi.github.io/undangan/preview.jpg" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+
 <!-- Primary Meta -->
 <title>Undangan Pernikahan Ikhsan & Anggi</title>
 <meta name="description" content="Sabtu, 10 Januari 2025 | Undangan Pernikahan Ikhsan & Anggi">
