--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body {
 
 /* COVER */
 .cover {
-    position: fixed;
+    position: relative;
     height: 100vh;
     width: 100%;
     overflow: hidden;
@@ -72,16 +72,22 @@ body {
     content: "";
     position: absolute;
     inset: 0;
-    /* Ganti dengan path gambar Anda */
-    background: url('assets/images/cover.webp') center/cover no-repeat; 
-    filter: brightness(1);
-    transform: scale(1.05);
+    background:
+      linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
+      url('assets/images/cover.jpg') center/cover no-repeat;
+    filter: blur(1px) brightness(0.95);
+    transform: scale(1.1);
+    z-index: -2;
+}
+.cover::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: rgba(70, 80, 105, 0.5);
+    backdrop-filter: blur(2px);
     z-index: -1;
 }
 
-
-
-/* Konten kiri bawah */
 .content {
     padding-top: 5vh;
     position: absolute;
@@ -94,59 +100,81 @@ body {
     justify-content: center;
     text-align: center;
 
-    background: rgba(255, 255, 255, 0.25);
-    backdrop-filter: blur(2px);
+    background: none;
+    backdrop-filter: none;
 
     padding: 24px;
-    border-radius: 0;
+    transform: translateY(12vh);
 }
-
 .content h1 {
     position: absolute;
-    top: 15vh;
+    top: 14vh; /* naikkan posisi */
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, 0);
     margin: 0;
+    font-family: 'Playfair Display', serif;
+    font-size: clamp(1.4rem, 5vw, 2rem);
+    color: #ffff;
+    text-align: center;
     white-space: nowrap;
-    font-size: clamp(1.1rem, 4.5vw, 1.6rem);
 
+    text-shadow:
+        0 0 6px rgba(255,255,255,0.2),
+        0 0 12px rgba(180,200,255,0.2),
+        0 0 20px rgba(120,160,255,0.2);
 }
 
-.to { margin: 0 0 5px 0; font-size: 1.15rem; color: #fff; }
+
+
+
+.to {
+    margin: 0 0 6px 0;
+    font-size: 1rem;
+    color: rgba(255,255,255,0.9);
+    margin-bottom: 16px;
+}
+
 
 #guestNameWrapper {
-    display: inline-block;
-    padding: 0.6vw 1vw;
-    background: rgba(255, 255, 255, 0.25);
-    border: 1px solid rgba(255,255,255,0.4);
-    backdrop-filter: blur(3px);
-    border-radius: 12px;
-    margin-bottom: 4px;
+    padding: 10px 18px;
+    background: rgba(180, 205, 235, 0.35); /* soft blue */
+    border: 1px solid rgba(200, 220, 245, 0.5);
+    backdrop-filter: blur(5px);
+    border-radius: 16px;
+    margin-bottom: 12px;
+    box-shadow: 0 0 12px rgba(160, 190, 230, 0.35);
 }
 
-#guestName { font-weight: 700; font-size: 1.25rem; color: #fff; display: block; }
-#guestNote { font-style: italic; font-size: 0.85rem; color: #e0e0e0; margin-top: 2px; }
+
+#guestName {
+    font-weight: 700;
+    font-size: 1.4rem;
+    color: #fff;
+}
+
+#guestNote {
+    font-size: 0.75rem;
+    color: rgba(255,255,255,0.7);
+    margin-bottom: 18px;
+}
+
 
 .content h1 { font-family: 'Playfair Display', serif; font-size: clamp(1.5rem,5vw,2rem); color: #f0f4fa; margin: 10px 0 0 0; }
 
 .button {
-    display: inline-flex;
-    align-items: center;
-    gap: 0.3rem;
-    background-color: #cbd5e1;
+    background-color: rgba(255,255,255,0.9);
     color: #1e3a8a;
-    padding: 0.5rem 0.9rem;
+    padding: 0.55rem 1rem;
     border-radius: 28px;
-    text-decoration: none;
-    cursor: pointer;
     font-weight: 600;
     font-size: 0.9rem;
-    margin-top: 12px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    transition: 0.3s ease;
+    margin-top: 14px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.25);
+}
+.button:hover {
+    background-color: #ffffff;
 }
 
-.button:hover { background-color: #bfcad6; }
 
 /* RESPONSIVE */
 @media (max-width:768px){
