--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body {
     inset: 0;
     background:
       linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
-      url('assets/images/cover.jpg') center/cover no-repeat;
+      url('assets/images/cover.webp') center/cover no-repeat;
     filter: blur(1px) brightness(0.95);
     transform: scale(1.1);
     z-index: -2;
