--- a/home.html
+++ b/home.html
@@ -312,10 +312,10 @@
 
       <!-- AKUN 2 -->
       <div class="gift-item">
-        <img src="assets/images/dana-logo.png" alt="DANA" class="gift-logo">
-        <h3 class="gift-name">Ikhsan</h3>
-        <p class="gift-number">081370237909</p>
-        <button class="gift-btn" onclick="copyGift('08XXXXXXXXXX')">
+        <img src="assets/images/bri.png" alt="BRI" class="gift-logo">
+        <h3 class="gift-name">Muhammad Ikhsan Azhari</h3>
+        <p class="gift-number">036701101827505</p>
+        <button class="gift-btn" onclick="copyGift('0367XXXXXXXX')">
           <i class="fa-regular fa-copy"></i> Salin Nomor
         </button>
       </div>
