--- a/home.html
+++ b/home.html
@@ -314,8 +314,8 @@
       <div class="gift-item">
         <img src="assets/images/bri.png" alt="BRI" class="gift-logo">
         <h3 class="gift-name">Muhammad Ikhsan Azhari</h3>
-        <p class="gift-number">036701101827505</p>
-        <button class="gift-btn" onclick="copyGift('0367XXXXXXXX')">
+        <p class="gift-number">0367 0110 1827 505</p>
+        <button class="gift-btn" onclick="copyGift('036701101827505')">
           <i class="fa-regular fa-copy"></i> Salin Nomor
         </button>
       </div>
